created documentation for Mechanic Shop API
